Changelog
=========

1.0a2 (unreleased)
------------------

- Added basic Word Cloud browser view.
  [lgraf]


1.0a1 (2012-08-22)
------------------

- Initial release