@@ -36,6 +36,9 @@ Word Cloud
 Assuming there is a correctly configured index 'wordCloudTerms', a Word Cloud
 showing the most common terms across documents can be displayed.
 
+The Word Cloud is implemented in a browser view that can either be displayed
+stand-alone by traversing to /@@wordcloud or rendered in a portlet.
+
 Ajax-ified search form
 ----------------------
 
